--- a/Project_dog_vision.ipynb
+++ b/Project_dog_vision.ipynb
@@ -5,8 +5,9 @@
     "colab": {
       "name": "Project-dog-vision",
       "provenance": [],
+      "toc_visible": true,
       "mount_file_id": "1gvx_KaLlFekJGBF2JYeLWy6OV9TwLs1e",
-      "authorship_tag": "ABX9TyMSQ08rn22rswpHQoUVdcfU",
+      "authorship_tag": "ABX9TyMyNEqWmdAt5J5MhnzYJlDw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,9 +78,47 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RUjgSb8PgONK",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Getting our workspace ready "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "MtpwB84q2lbe",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "077d7def-7aa4-4374-b59a-34892dbf96af"
+      },
+      "source": [
+        "# Import TensorFlow into Colab \n",
+        "\n",
+        "import tensorflow as tf\n",
+        "print(\"TF version :\", tf.__version__)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "TF version : 2.2.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HAnjdOkhguTA",
         "colab_type": "code",
         "colab": {}
       },
