Added GPU hardware

--- a/Project_dog_vision.ipynb
+++ b/Project_dog_vision.ipynb
@@ -5,15 +5,15 @@
     "colab": {
       "name": "Project-dog-vision",
       "provenance": [],
-      "toc_visible": true,
       "mount_file_id": "1gvx_KaLlFekJGBF2JYeLWy6OV9TwLs1e",
-      "authorship_tag": "ABX9TyMyNEqWmdAt5J5MhnzYJlDw",
+      "authorship_tag": "ABX9TyPnQ8h0D8Aor34+1f4FsqEx",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -74,7 +74,7 @@
         "\n",
         "#!unzip \"drive/My Drive/dog-vision-data/dog-breed-identification.zip\" -d \"drive/My Drive/dog-vision-data/\""
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -84,7 +84,11 @@
         "colab_type": "text"
       },
       "source": [
-        "### Getting our workspace ready "
+        "### Getting our workspace ready \n",
+        "\n",
+        "* Import TensorFlow 2.x ✔️\n",
+        "* Import TensorFlow Hub\n",
+        "* Make sure we are using a GPU\n"
       ]
     },
     {
@@ -94,22 +98,28 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 68
         },
-        "outputId": "077d7def-7aa4-4374-b59a-34892dbf96af"
+        "outputId": "db6cfd0c-edfd-4dff-aa2d-9ae7bc110ffc"
       },
       "source": [
-        "# Import TensorFlow into Colab \n",
-        "\n",
+        "# Import necessary tools\n",
         "import tensorflow as tf\n",
-        "print(\"TF version :\", tf.__version__)"
+        "import tensorflow_hub as hub\n",
+        "print(\"TF version :\", tf.__version__)\n",
+        "print(\"TF Hub version:\",hub.__version__)\n",
+        "\n",
+        "# Check for GPU availablity \n",
+        "print(\"GPU\",\"available (Yessssssss!!!!)\" if tf.config.list_physical_devices(\"GPU\") else \"not available :(\")"
       ],
-      "execution_count": 5,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "TF version : 2.2.0\n"
+            "TF version : 2.2.0\n",
+            "TF Hub version: 0.8.0\n",
+            "GPU available (Yessssssss!!!!)\n"
           ],
           "name": "stdout"
         }
