Connected to GPU and exploring label data

--- a/Project_dog_vision.ipynb
+++ b/Project_dog_vision.ipynb
@@ -6,7 +6,7 @@
       "name": "Project-dog-vision",
       "provenance": [],
       "mount_file_id": "1gvx_KaLlFekJGBF2JYeLWy6OV9TwLs1e",
-      "authorship_tag": "ABX9TyPnQ8h0D8Aor34+1f4FsqEx",
+      "authorship_tag": "ABX9TyP7i+rb+1nGCT901vcbg39I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,8 +87,8 @@
         "### Getting our workspace ready \n",
         "\n",
         "* Import TensorFlow 2.x ✔️\n",
-        "* Import TensorFlow Hub\n",
-        "* Make sure we are using a GPU\n"
+        "* Import TensorFlow Hub ✔️\n",
+        "* Make sure we are using a GPU ✔️\n"
       ]
     },
     {
@@ -100,7 +100,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "db6cfd0c-edfd-4dff-aa2d-9ae7bc110ffc"
+        "outputId": "6d235503-6821-4c0a-aab6-6791242456ff"
       },
       "source": [
         "# Import necessary tools\n",
@@ -126,9 +126,63 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "HAnjdOkhguTA",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Getting our data ready (Turning into Tensors)\n",
+        "\n",
+        "With all Machine Leanring models, our data has to be in numerical format. So that's what we will be doing first. Turning our images into Tensors(numerical representations)\n",
+        "\n",
+        "Let's start by accessing our data and checking out checking out the labels."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6QWSQOexVu_y",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "5d43b0c4-2f34-4a10-ddda-b3a95eb0e10f"
+      },
+      "source": [
+        "# Checkout the labels of our data \n",
+        "import pandas as pd \n",
+        "# Path --> /content/drive/My Drive/dog-vision-data/labels.csv\n",
+        "labels_csv = pd.read_csv(\"drive/My Drive/dog-vision-data/labels.csv\")\n",
+        "print(labels_csv.describe())\n",
+        "print(labels_csv.head())"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "                                      id               breed\n",
+            "count                              10222               10222\n",
+            "unique                             10222                 120\n",
+            "top     d6bcaac6c121bd89f127f6b839959510  scottish_deerhound\n",
+            "freq                                   1                 126\n",
+            "                                 id             breed\n",
+            "0  000bec180eb18c7604dcecc8fe0dba07       boston_bull\n",
+            "1  001513dfcb2ffafc82cccf4d8bbaba97             dingo\n",
+            "2  001cdf01b096e06d78e9e5112d419397          pekinese\n",
+            "3  00214f311d5d2247d5dfe4fe24b2303d          bluetick\n",
+            "4  0021f9ceb3235effd7fcde7f7538ed62  golden_retriever\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AObxEk1DXb33",
         "colab_type": "code",
         "colab": {}
       },
