--- a/Project_dog_vision.ipynb
+++ b/Project_dog_vision.ipynb
@@ -6,7 +6,7 @@
       "name": "Project-dog-vision",
       "provenance": [],
       "mount_file_id": "1gvx_KaLlFekJGBF2JYeLWy6OV9TwLs1e",
-      "authorship_tag": "ABX9TyNcR1oIdAvsGjwCNiMo/cVH",
+      "authorship_tag": "ABX9TyPpCiQATvleKhhE3D/KVQ7e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -624,6 +624,40 @@
       "cell_type": "code",
       "metadata": {
         "id": "gYHoVuxaS46K",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "30c6e59f-2857-425c-b705-797ab75e0e59"
+      },
+      "source": [
+        "# Great!! Now, lets find out the breed of this dog \n",
+        "labels_csv[\"breed\"][999]"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'irish_wolfhound'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ei3FbRrzT29d",
         "colab_type": "code",
         "colab": {}
       },
