Experimenting with sample of images

--- a/Project_dog_vision.ipynb
+++ b/Project_dog_vision.ipynb
@@ -6,7 +6,7 @@
       "name": "Project-dog-vision",
       "provenance": [],
       "mount_file_id": "1gvx_KaLlFekJGBF2JYeLWy6OV9TwLs1e",
-      "authorship_tag": "ABX9TyNmjBcLxapxaA0dRT9XyUbY",
+      "authorship_tag": "ABX9TyNh3cGb3lDIe3bM7/0Au0hZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,7 +74,7 @@
         "\n",
         "#!unzip \"drive/My Drive/dog-vision-data/dog-breed-identification.zip\" -d \"drive/My Drive/dog-vision-data/\""
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -112,7 +112,7 @@
         "# Check for GPU availablity \n",
         "print(\"GPU\",\"available (Yessssssss!!!!)\" if tf.config.list_physical_devices(\"GPU\") else \"not available :(\")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,7 +158,7 @@
         "print(labels_csv.describe())\n",
         "print(labels_csv.head())"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,7 +193,7 @@
       "source": [
         "labels_csv.head()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -282,7 +282,7 @@
         "# How many images are there of each breed\n",
         "labels_csv[\"breed\"].value_counts()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -323,7 +323,7 @@
       "source": [
         "labels_csv[\"breed\"].value_counts().plot.bar(figsize = (15,10));"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -354,7 +354,7 @@
       "source": [
         "labels_csv[\"breed\"].value_counts().median()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -398,7 +398,7 @@
         "from IPython.display import Image\n",
         "Image(\"drive/My Drive/dog-vision-data/train/00214f311d5d2247d5dfe4fe24b2303d.jpg\")"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -441,7 +441,7 @@
       "source": [
         "labels_csv.head()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -533,7 +533,7 @@
         "# Check for the first 10\n",
         "filename[:10]"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -577,7 +577,7 @@
         "else:\n",
         "  print(\"filename donot match actual amount of files, check the target directory\")\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -603,7 +603,7 @@
         "# One more check \n",
         "Image(filename[999])"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -635,7 +635,7 @@
         "# Great!! Now, lets find out the breed of this dog \n",
         "labels_csv[\"breed\"][999]"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -681,7 +681,7 @@
         "#labels = np.array(lables) # does the same thing as above\n",
         "labels"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -712,7 +712,7 @@
       "source": [
         "len(labels)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -746,7 +746,7 @@
         "else:\n",
         "  print(\"Number of labels does not match with number of file names\")"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -773,7 +773,7 @@
         "unique_breeds = np.unique(labels)\n",
         "unique_breeds"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -838,7 +838,7 @@
       "source": [
         "len(unique_breeds)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -870,7 +870,7 @@
         "print(labels[0])\n",
         "labels[0] == unique_breeds\n"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -922,7 +922,7 @@
         "boolen_labels = [label == unique_breeds for label in labels]\n",
         "boolen_labels[:2]"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -969,6 +969,152 @@
       "cell_type": "code",
       "metadata": {
         "id": "dki47I25-Ox2",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "56731515-6706-4eda-e2ec-4573e1d45039"
+      },
+      "source": [
+        "len(boolen_labels)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10222"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bdxdZ8X0_Dx3",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        },
+        "outputId": "bde9e81f-9efc-49e6-916e-a7b53d2758c4"
+      },
+      "source": [
+        "# Example: Turing boolen array into integers\n",
+        "print(labels[0]) # Original label\n",
+        "print(np.where(unique_breeds == labels[0])) # index where labels occurs\n",
+        "print(boolen_labels[0].argmax()) # index where label occurs in boolen array\n",
+        "print(boolen_labels[0].astype(int)) # there will be a 1 where the sample label occurs"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "boston_bull\n",
+            "(array([19]),)\n",
+            "19\n",
+            "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+            " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+            " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+            " 0 0 0 0 0 0 0 0 0]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Sf455D00BSZA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "4b77802d-6615-442d-b1b2-0fac21f3d04a"
+      },
+      "source": [
+        "print(labels[2])\n",
+        "print(boolen_labels[2].astype(int))\n"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "pekinese\n",
+            "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+            " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+            " 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+            " 0 0 0 0 0 0 0 0 0]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wD3SmqYmCGkn",
+        "colab_type": "text"
+      },
+      "source": [
+        " ### Creating our own Validation set \n",
+        " Since, the dataset from kaggel does not come with a validation set, we are going to create our own"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LBhc3ELfIdf8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Setup X and y variables\n",
+        "\n",
+        "X = filename\n",
+        "y = boolen_labels"
+      ],
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cRWQNqQKJC2j",
+        "colab_type": "text"
+      },
+      "source": [
+        "We are going to start off experimenting with ~1000 images and increase as needed"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "puJAussgJDxk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Set the number of images to use for experimenting \n",
+        "NUM_IMAGES = 1000 #@param {type:\"slider\", min:1000, max:10000, step:1000}"
+      ],
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rph1pveWK5qM",
         "colab_type": "code",
         "colab": {}
       },
