--- a/Project_dog_vision.ipynb
+++ b/Project_dog_vision.ipynb
@@ -6,7 +6,7 @@
       "name": "Project-dog-vision",
       "provenance": [],
       "mount_file_id": "1gvx_KaLlFekJGBF2JYeLWy6OV9TwLs1e",
-      "authorship_tag": "ABX9TyNh3cGb3lDIe3bM7/0Au0hZ",
+      "authorship_tag": "ABX9TyNZoeAtisW8O7aNQOo6oDla",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1084,7 +1084,7 @@
         "X = filename\n",
         "y = boolen_labels"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1108,13 +1108,239 @@
         "# Set the number of images to use for experimenting \n",
         "NUM_IMAGES = 1000 #@param {type:\"slider\", min:1000, max:10000, step:1000}"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "rph1pveWK5qM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a18e054b-65f3-4adc-8581-d6320e75f6fe"
+      },
+      "source": [
+        "# Let's split our data into train and validation sets\n",
+        "from sklearn .model_selection import train_test_split\n",
+        "# np.random.seed(42)\n",
+        "# Split them into training and validation of total size NUM_IMAGES\n",
+        "X_train, X_val, y_train, y_val = train_test_split(X[:NUM_IMAGES], y[:NUM_IMAGES], test_size = 0.2, random_state = 42)\n",
+        "\n",
+        "len(X_train), len(y_train), len(X_val), len(y_val)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(800, 800, 200, 200)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "P613__P9NL-M",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 527
+        },
+        "outputId": "8a1e92b2-8e7e-427f-ec90-bd11d2aeec40"
+      },
+      "source": [
+        "# lets have a look at training data\n",
+        "X_train[:2], y_train[:2]"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(['drive/My Drive/dog-vision-data/train/00bee065dcec471f26394855c5c2f3de.jpg',\n",
+              "  'drive/My Drive/dog-vision-data/train/0d2f9e12a2611d911d91a339074c8154.jpg'],\n",
+              " [array([False, False, False, False, False, False, False, False, False,\n",
+              "         False, False, False, False, False, False, False, False, False,\n",
+              "         False, False, False, False, False, False, False, False,  True,\n",
+              "         False, False, False, False, False, False, False, False, False,\n",
+              "         False, False, False, False, False, False, False, False, False,\n",
+              "         False, False, False, False, False, False, False, False, False,\n",
+              "         False, False, False, False, False, False, False, False, False,\n",
+              "         False, False, False, False, False, False, False, False, False,\n",
+              "         False, False, False, False, False, False, False, False, False,\n",
+              "         False, False, False, False, False, False, False, False, False,\n",
+              "         False, False, False, False, False, False, False, False, False,\n",
+              "         False, False, False, False, False, False, False, False, False,\n",
+              "         False, False, False, False, False, False, False, False, False,\n",
+              "         False, False, False]),\n",
+              "  array([False, False, False, False, False, False, False, False, False,\n",
+              "         False, False, False, False, False, False, False, False, False,\n",
+              "         False, False,  True, False, False, False, False, False, False,\n",
+              "         False, False, False, False, False, False, False, False, False,\n",
+              "         False, False, False, False, False, False, False, False, False,\n",
+              "         False, False, False, False, False, False, False, False, False,\n",
+              "         False, False, False, False, False, False, False, False, False,\n",
+              "         False, False, False, False, False, False, False, False, False,\n",
+              "         False, False, False, False, False, False, False, False, False,\n",
+              "         False, False, False, False, False, False, False, False, False,\n",
+              "         False, False, False, False, False, False, False, False, False,\n",
+              "         False, False, False, False, False, False, False, False, False,\n",
+              "         False, False, False, False, False, False, False, False, False,\n",
+              "         False, False, False])])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8CCXSyAWPdec",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Preprocessing Images (Turning Images into Tensors)\n",
+        "\n",
+        "To preprocess our Images into Tensors . we're going to write a function which does a few things: \n",
+        "\n",
+        "1. Take the image filepath as input\n",
+        "2. Use Tensorflow to read the file and save it to a variable, `image`\n",
+        "3. Turn our `image` jpg into Tensors \n",
+        "3. Resize the `image` to be a shape of (224,224)\n",
+        "4. Return the modified `image`\n",
+        "\n",
+        "Before we do, lets see what importing an image looks like."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "D2dmEf2aeRUx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "585b09f5-4373-4523-8fc7-6d2adca61d10"
+      },
+      "source": [
+        "# Convert Image to NumPy array \n",
+        "from matplotlib.pyplot import imread\n",
+        "image = imread(filename[42])\n",
+        "image.shape\n",
+        "# Image is a combinatiomn of red,green and blue pixel values"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(257, 350, 3)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZC_e-2kChQz0",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e2a6ac7a-33be-41ba-ee27-88b29bdfab30"
+      },
+      "source": [
+        "image.max(), image.min()"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(255, 0)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-ngy8TzoiYtQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 289
+        },
+        "outputId": "3baef292-f3ca-4dcd-fa66-b3edd37f81b0"
+      },
+      "source": [
+        "# Turn image into a Tensor\n",
+        "tf.constant(image)[:2]"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 350, 3), dtype=uint8, numpy=\n",
+              "array([[[ 89, 137,  87],\n",
+              "        [ 76, 124,  74],\n",
+              "        [ 63, 111,  59],\n",
+              "        ...,\n",
+              "        [ 76, 134,  86],\n",
+              "        [ 76, 134,  86],\n",
+              "        [ 76, 134,  86]],\n",
+              "\n",
+              "       [[ 72, 119,  73],\n",
+              "        [ 67, 114,  68],\n",
+              "        [ 63, 111,  63],\n",
+              "        ...,\n",
+              "        [ 75, 131,  84],\n",
+              "        [ 74, 132,  84],\n",
+              "        [ 74, 131,  86]]], dtype=uint8)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JF2I6YQ8i8Wk",
         "colab_type": "code",
         "colab": {}
       },
